--- a/src/app/components/calculator/calculator.component.html
+++ b/src/app/components/calculator/calculator.component.html
@@ -1,7 +1,7 @@
 <p>Calculator</p>
 
 <div>
-  <div class="display">
+  <div class="display text-xl">
     <input [(ngModel)]="showDisplay" />
   </div>
   <div class="button-container">
